Add GC options